--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ h3 {
   font-size: 20px;
   color: #000000;
   line-height: 22px;
+  padding:10px;
+  padding-left: 0;
 }
 
 h4 {
@@ -42,7 +44,7 @@ h4 {
   line-height: 17px;
 }
 
-h2, h3, h4, h5 {
+h2, h4, h5 {
   padding:10px;
   padding-left: 5%;
   padding-right: 5%;
